--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,81 +1,68 @@
-.survey {
-    width: 770px;
-    height: 370px;
+.jumbotron-info {
+    width: 450px;
+    height: 500px;
     margin: 0 auto;
-    position: absolute;
-    top: 215px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(255, 255, 255, .75);
-    text-align: center;
+    padding-top: 100px;
+    padding-left: 500px;
+    position: relative;
 }
 
-.survey .survey-title {
-    margin-top: 60px;
-    font-size: 22px;
+.jumbotron-info h1 {
+    font-size: 32px;
+    font-weight: 500;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.jumbotron-info p {
+    font-size: 18px;
     font-weight: 400;
-    color: #666;
+    color: #444;
+    margin-bottom: 10px;
 }
 
-.survey .survey-title #italic {
-    font-style: italic;
+.jumbotron-info p span {
+    color: #648efc;
     font-weight: bold;
 }
 
-.survey .survey-subtitle {
+.jumbotron-info a {
+    position: absolute;
+    background: #648efc;
+    padding: 10px 55px 10px 55px;
     font-size: 16px;
-    font-weight: 300;
-    margin-top: 15px;
-    margin-bottom: 30px;
+    font-weight: 500;
+    color: white;
+    top: 270px;
+    left: 580px;
 }
 
-.checkbox {
-    font-size: 14px;
-    width: 550px;
+.jumbotron-header {
+    width: 400px;
     margin: 0 auto;
-    text-align: center;
 }
 
-.survey table {
-    width: 100%;
-}
-
-.survey table td {
-    width: 20%;
-    height: 30px;
-    text-align: left;
-}
-
-.survey input[type=checkbox] {
-    display: none;
-}
-
-.survey label {
-    cursor: pointer;
-}
-
-.survey label:before {
-    content: "\2713";
+.jumbotron-header ul li {
     display: inline-block;
-    width: 14px;
-    height: 14px;
-    background-color: transparent;
-    line-height: 16px;
-    font-size: 16px;
-    color: transparent;
-    border: 1px solid rgba(0, 0, 0, .2);
-    margin-right: 8px;
+    padding: 10px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #777;
+    border: solid 1px #777;
     cursor: pointer;
+    margin-right: 15px;
 }
 
-.survey input[type=checkbox]:checked + label:before {
-    content: "\2713";
-    font-size: 16px;
-    color: #333;
-    text-align: center;
-    line-height: 16px;
-    cursor: pointer;
+.jumbotron #owl .item img {
+    display: block;
+    width: 100%;
+    height: 400px;
+}
+
+.jumbotron .owl-carousel {
+    margin-top: 35px;
+    margin-bottom: 50px;
+    z-index: 2;
 }
 
 .special-service {
@@ -107,14 +94,14 @@
 .special-service .special-sort li {
     display: inline-block;
     margin-right: 10px;
-    font-size: inherit;
+    font-size: 14px;
     font-weight: bold;
     color: #888;
     cursor: pointer;
 }
 
 .special-service .special-sort li.active {
-    color: #333;
+    color: #648efc;
 }
 
 .jumbotron .survey-pagination {
