--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
         .jumbotron {
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center center;
         }
     </style>
 {% endblock %}
@@ -56,7 +57,7 @@
 
 {% block jumbotron %}
     {% if not user.is_authenticated %}
-        <div class="jumbotron" style='background-image: url("{% static 'img/pre_login-04.png' %}");'>
+        <div class="jumbotron" style='background-image: url("{% static 'img/pre_login.png' %}");'>
             <div class="jumbotron-info">
                 <h1>여러분의 제품을 홍보할수 있는 SNS를 추천해드립니다</h1>
                 <p>인플루언서와 직거래로 비싼 수수료는 <span>그만!</span></p>
