--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,9 @@
 {% block js %}
     <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/highcharts/highcharts.src.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/highcharts/highcharts-more.src.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/highcharts/solid-gauge.src.js' %}"></script>
     <script type="text/javascript">
         $(function () {
             $('.sort').on('click', function () {
@@ -121,6 +124,7 @@
                         <ul>
                             <li class="sort active" data-type="sort_1">평점순</li>
                             <li class="sort" data-type="sort_2">최신순</li>
+                            <li class="sort" data-type="sort_3">가격순</li>
                         </ul>
                     </div>
                 {% endif %}
@@ -128,10 +132,10 @@
             <div class="special-list">
                 {% if message %}
                     {% for product in products %}
-                        {% cycle '<div class="row">' '' '' '' %}
+                        {% cycle '<div class="row">' '' '' %}
                         <a href="{{ product.get_absolute_url }}"
                            class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
-                            <div class="card-image">
+                            <!-- <div class="card-image">
                                 <div class="card-price">
                                     {{ product.variation_set.first.price }}&#8361;~
                                 </div>
@@ -141,7 +145,7 @@
                                 {% else %}
                                     <img src="{{ product.get_image_url }}">
                                 {% endif %}
-                            </div>
+                            </div> -->
                             <div class="card-info">
                                 <div class="card-title">
                                     {{ product.title }}
@@ -171,7 +175,7 @@
                         {% if products|length == forloop.counter %}
                             </div>
                         {% else %}
-                            {% cycle '' '' '' '</div>' %}
+                            {% cycle '' '' '</div>' %}
                         {% endif %}
                     {% endfor %}
                 {% else %}
@@ -181,21 +185,17 @@
 
                             <a href="{{ product.get_absolute_url }}"
                                class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
-                                <div class="card-image">
-                                    <div class="card-price">
-                                        {{ product.variation_set.first.price }}&#8361;~
-                                    </div>
-                                    <div class="card-price-back"></div>
-                                    {% if product.get_thumb_sd_url %}
-                                        <img src="{{ product.get_thumb_sd_url }}">
-                                    {% else %}
-                                        <img src="{{ product.get_image_url }}">
-                                    {% endif %}
+                                <div class="card-main-info" data-type="{{ product.product_type }}">
+                                  <div class="card-type">
+                                    <img src="{{ product.product_type_image_url }}" alt="{{ product_product_type }}" />
+                                  </div>
+                                  <div class="card-title">
+                                    {{product.title}}
+                                  </div>
+                                  <div class="socialup-gauge" style="width: 256px; height: 120px;" data-color="{{ product.product_type_color }}"></div>
+                                  <div class="product-price">{{ product.variation_set.first.price }}원~</div>
                                 </div>
                                 <div class="card-info">
-                                    <div class="card-title">
-                                        {{ product.title }}
-                                    </div>
                                     <div class="card-subtitle">
                                         {% for sns in product.sns_set.all %}
                                             {% for item in sns.analytics.all %}
@@ -205,7 +205,8 @@
                                     </div>
                                     <div class="card-author">
                                         <div class="card-author-info">
-                                            {{ product.seller }}
+                                            <img src="{{ product.seller.user.get_avatar }}" >
+                                            <span>{{ product.seller }}</span>
                                         </div>
                                         <div class="card-author-info-rating" data-rating="{{ product.rating }}">
                                             <i class="fa fa-star" aria-hidden="true"></i>
@@ -228,50 +229,49 @@
                     </div>
                     <div class="product-created" style="display:none;">
                         {% for product in products_created %}
-                            {% cycle '<div class="row">' '' '' '' %}
-                            <a href="{{ product.get_absolute_url }}"
-                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
-                                <div class="card-image">
-                                    <div class="card-price">
-                                        {{ product.variation_set.first.price }}&#8361;~
-                                    </div>
-                                    <div class="card-price-back"></div>
-                                    {% if product.get_thumb_sd_url %}
-                                        <img src="{{ product.get_thumb_sd_url }}">
-                                    {% else %}
-                                        <img src="{{ product.get_image_url }}">
-                                    {% endif %}
-                                </div>
-                                <div class="card-info">
-                                    <div class="card-title">
-                                        {{ product.title }}
-                                    </div>
-                                    <div class="card-subtitle">
-                                        {% for sns in product.sns_set.all %}
-                                            {% for item in sns.analytics.all %}
-                                                {{ item }} {{ item.outcome|round_count }}
-                                            {% endfor %}
+                        {% cycle '<div class="row">' '' '' '' %}
+
+                        <a href="{{ product.get_absolute_url }}"
+                           class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
+                            <div class="card-main-info" data-type="{{ product.product_type }}">
+                              <div class="card-type">
+                                <img src="{{ product.product_type_image_url }}" alt="{{ product_product_type }}" />
+                              </div>
+                              <div class="card-title">
+                                {{product.title}}
+                              </div>
+                              <div class="socialup-gauge" style="width: 256px; height: 120px;" data-color="{{ product.product_type_color }}"></div>
+                              <div class="product-price">{{ product.variation_set.first.price }}원~</div>
+                            </div>
+                            <div class="card-info">
+                                <div class="card-subtitle">
+                                    {% for sns in product.sns_set.all %}
+                                        {% for item in sns.analytics.all %}
+                                            {{ item }} {{ item.outcome|round_count }}
                                         {% endfor %}
+                                    {% endfor %}
+                                </div>
+                                <div class="card-author">
+                                    <div class="card-author-info">
+                                        <img src="{{ product.seller.user.get_avatar }}" >
+                                        <span>{{ product.seller }}</span>
                                     </div>
-                                    <div class="card-author">
-                                        <div class="card-author-info">
-                                            {{ product.seller }}
-                                        </div>
-                                        <div class="card-author-info-rating" data-rating="{{ product.rating }}">
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                            <i class="fa fa-star" aria-hidden="true"></i>
-                                        </div>
+                                    <div class="card-author-info-rating" data-rating="{{ product.rating }}">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
                                     </div>
                                 </div>
-                            </a>
-                            {% if products|length == forloop.counter %}
-                                </div>
-                            {% else %}
-                                {% cycle '' '' '' '</div>' %}
-                            {% endif %}
+                            </div>
+                        </a>
+
+                        {% if products|length == forloop.counter %}
+                            </div>
+                        {% else %}
+                            {% cycle '' '' '' '</div>' %}
+                        {% endif %}
                         {% endfor %}
                     </div>
                 {% endif %}
