implement contact with scroll
 - While scrolling, the position of contact box is fixed at bottom right.
 - When contact box reached footer, contact box's position is fixed above footer.

--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,7 +1,10 @@
 .contact {
-    position: absolute;
+    /*position: absolute;
     right: 30px;
+		position:relative;
+		left:88%;
     z-index: 15;
+		*/
 }
 
 .contact .contact-button {
