--- a/static/css/home.css
+++ b/static/css/home.css
@@ -203,7 +203,7 @@
 
 .list-card {
     float: left;
-    width: 306px;
+    width: 23%;
     height: 265px;
     background: white;
     margin-right: 18px;
@@ -264,21 +264,21 @@
 }
 
 .list-card .card-main-info .card-type {
-    position: absolute;
-    right: 0;
-    top: 0;
+    position: relative;
+		float: left;
 }
 
 .list-card .card-main-info {
     height: 180px;
     /*width: 266px;*/
-    padding: 35px 25px 0 25px;
+    padding: 18px 25px 17px 25px;
     text-align: center;
 }
 
 .list-card .card-main-info .card-title {
     font-size: 16px;
     font-weight: 600;
+		height:3em;
     line-height: 24px;
     color: #333;
     z-index: 10;
@@ -363,4 +363,183 @@
 
 .row {
     height: 330px;
+}
+
+/* social gauge part */
+#circle{
+	position:relative;
+  height:45px;
+  width:90px;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+  background:green;
+}
+#circle-mask{
+	position:absolute;
+	bottom:0;
+	left:20px;
+	/*padding-top:10px;
+	margin-left:5px;
+	*/
+  height:25px;
+  width:50px;
+  border-radius: 50px 50px 0 0;
+  -moz-border-radius: 50px 50px 0 0;
+  -webkit-border-radius: 50px 50px 0 0;
+  background:white;
+	z-index:3;
+}
+
+.circle-wrapper{
+	width:300px;
+	height:150px;
+	/*background-color:grey;*/
+}
+/* arrow for 1 */
+/*
+#arrow{
+	position:relative;
+	left:30;
+	top:90;
+	transform: rotate(15deg);
+}
+*/
+/* arrow for 2 */
+/*
+#arrow{
+	position:relative;
+	left:21%;
+	top:30;
+	transform: rotate(45deg);
+}
+*/
+/* arrow for 3 */
+/*
+#arrow{
+	position:relative;
+	left:45%;
+	top:0;
+	transform: rotate(90deg);
+}
+*/
+/* arrow for 4 */
+/*
+#arrow{
+	position:relative;
+	left:70%;
+	top:30;
+	transform: rotate(135deg);
+}
+*/
+/* arrow for 5 */
+.circle-arrow{
+	position:relative;
+	left:10%;
+	top:3.5em;
+	transform: rotate(160deg);
+}
+/*
+*/
+/* ul tag circle */
+.circle {
+  position: relative;
+  /*border: 1px solid black;*/
+  padding: 0;
+  /*margin: 1em auto;*/
+  /*margin: 1em 1em 0 3em;*/
+	margin-left:5%;
+  width: 150px;
+  height: 75px;
+  border-radius: 150px 150px 0 0;
+  list-style: none;
+  overflow: hidden;
+}
+.circle-list {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 75px;
+  height: 75px;
+  transform-origin: 0% 100%;
+}
+.circle-text {
+  position: absolute;
+  left: -100%;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  transform: skewY(36deg) rotate(15deg);
+  padding-top: 20px;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+}
+.circle-list:first-child {
+  transform: rotate(270deg) skewY(-36deg);
+}
+.circle-list:nth-child(2) {
+  transform: rotate(306deg) skewY(-36deg);
+}
+.circle-list:nth-child(3) {
+  transform: rotate(342deg) skewY(-36deg);
+}
+.circle-list:nth-child(4) {
+  transform: rotate(18deg) skewY(-36deg);
+}
+.circle-list:nth-child(5) {
+  transform: rotate(54deg) skewY(-36deg);
+}
+li:first-child .circle-text {
+	padding-top:7%;
+	color:black;
+  background: #cecece;
+}
+li:nth-child(2) .circle-text {
+	padding-top:7%;
+	color:black;
+  background: #cecece;
+}
+li:nth-child(3) .circle-text {
+	padding-top:7%;
+	color:black;
+  background: #cecece;
+}
+li:nth-child(4) .circle-text {
+	padding-top:7%;
+	color:black;
+  background: #cecece;
+}
+li:nth-child(5) .circle-text {
+	padding-top:7%;
+	color:white;
+  background: #3d4ca1;
+}
+.circle-mask2{
+	position:absolute;
+	bottom:0;
+	left:17%;
+  height:66%;
+  width:66%;
+  text-align:center;
+  margin-top:2em;
+  border-radius: 200px 200px 0 0;
+  -moz-border-radius: 200px 200px 0 0;
+  -webkit-border-radius: 200px 200px 0 0;
+  background:white;
+	z-index:3;
+}
+.circle-mask2-text{
+  padding-top:1em;
+}
+
+.cash{
+  position:relative;
+  width:60%;
+  height:18%;
+  padding-top:3%;
+  border:1px solid grey;
+  border-radius:15px;
+  text-align:center;
 }
