--- a/templates/home.html
+++ b/templates/home.html
@@ -190,14 +190,45 @@
                                     <img src="{{ product.product_type_image_url }}" alt="{{ product_product_type }}" />
                                   </div>
                                   <div class="card-title">
-                                    {{product.title}}
-                                  </div>
-                                  <div class="socialup-gauge" style="width: 256px; height: 120px;" data-color="{{ product.product_type_color }}"></div>
-                                  <div class="product-price">{{ product.variation_set.first.price }}원~</div>
-                                </div>
-                                <div class="card-info">
-                                    <div class="card-subtitle">
-                                        {% for sns in product.sns_set.all %}
+																		{{product.title}}
+																	</div>
+																	<div class="circle-wrapper">
+																		<img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+																		<ul class="circle">
+																			<li class="circle-list">
+																				<div class="circle-text">1</div>
+																			</li>
+																			<li class="circle-list">
+																				<div class="circle-text">2</div>
+																			</li>
+																			<li class="circle-list">
+																				<div class="circle-text">3</div>
+																			</li>
+																			<li class="circle-list">
+																				<div class="circle-text">4</div>
+																			</li>
+																			<li class="circle-list">
+																				<div class="circle-text">5</div>
+																			</li>
+																			<div class="circle-mask2">
+																				<div class="circle-mask2-text">
+																					<span style="font-size:2em;">50</span>
+																					<span style="font-size:1em;">원</span>
+																				</div>
+																			</div>
+																		</ul>
+																		<div class="cash">
+																			<span style="font-size:1.2em; color:grey;">{{ product.variation_set.first.price }}원~</span>
+																		</div>
+																	</div>
+																	<!--
+									 <div class="socialup-gauge" style="width: 256px; height: 120px;" data-color="{{ product.product_type_color }}"></div>
+																	<div class="product-price">{{ product.variation_set.first.price }}원~</div>
+																	-->
+																</div>
+																<div class="card-info">
+																	<div class="card-subtitle">
+																		{% for sns in product.sns_set.all %}
                                             {% for item in sns.analytics.all %}
                                                 {{ item }} {{ item.outcome|round_count }}
                                             {% endfor %}
