--- a/static/css/home.css
+++ b/static/css/home.css
@@ -269,21 +269,27 @@
 		float: left;
 }
 
+.list-card .card-main-info .card-type .product-type-image{
+    margin-top:4px;
+    margin-right:8px;
+}
+
 .list-card .card-main-info {
     height: 180px;
     /*width: 266px;*/
-    padding: 15px 25px 20px 25px;
+    padding: 15px 15px 20px 15px;
     /*text-align: center;*/
 }
 
 .list-card .card-main-info .card-title {
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 600;
     height:3em;
     text-align:center;
     line-height: 20px;
     color: #333;
     z-index: 10;
+    overflow:hidden;
 }
 
 .list-card .card-main-info .socialup-gauge {
@@ -377,26 +383,12 @@
   -webkit-border-radius: 90px 90px 0 0;
   background:green;
 }
-#circle-mask{
-	position:absolute;
-	bottom:0;
-	left:20px;
-	/*padding-top:10px;
-	margin-left:5px;
-	*/
-  height:25px;
-  width:50px;
-  border-radius: 50px 50px 0 0;
-  -moz-border-radius: 50px 50px 0 0;
-  -webkit-border-radius: 50px 50px 0 0;
-  background:white;
-	z-index:3;
-}
 
 .circle-wrapper{
 	width:300px;
 	height:150px;
     margin-top:5px;
+    margin-left:5px;
 	/*background-color:grey;*/
 }
 /* arrow for 1 */
