--- a/templates/home.html
+++ b/templates/home.html
@@ -193,7 +193,7 @@
                                class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}">
                                 <div class="card-main-info" data-type="{{ product.product_type }}" data-color="{{ product.product_type_color }}">
                                   <div class="card-type">
-                                    <img src="{{ product.product_type_image_url }}" alt="{{ product.product_type }}" />
+                                    <img class="product-type-image" src="{{ product.product_type_image_url }}" alt="{{ product.product_type }}" />
                                   </div>
                                   <div class="card-title">
                                         {{product.title}}
