--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -94,11 +94,45 @@
         <div class="content">
             <div class="product-top">
                 <div class="info-left">
+                    <img id="product-type-image" src="{{ product.product_type_image_url }}" alt="{{ product.product_type }}" />
+                    <div class="product-gauge" data-color="{{ product.product_type_color }}">
+                        <div class="circle-wrapper">
+                            <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                            <ul class="circle">
+                                <li class="circle-list">
+                                    <div class="circle-text">1</div>
+                                </li>
+                                <li class="circle-list">
+                                    <div class="circle-text">2</div>
+                                </li>
+                                <li class="circle-list">
+                                    <div class="circle-text">3</div>
+                                </li>
+                                <li class="circle-list">
+                                    <div class="circle-text">4</div>
+                                </li>
+                                <li class="circle-list">
+                                    <div class="circle-text">5</div>
+                                </li>
+                                <div class="circle-mask2">
+                                    <div class="circle-mask2-text">
+                                        <span style="font-size:2em;">50</span>
+                                        <span style="font-size:1em;">원</span>
+                                    </div>
+                                </div>
+                            </ul>
+                            <div class="cash">
+                                <span style="font-size:1.5em; color:grey;">{{ product.variation_set.first.price }}원~</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!--
                     {% if product.get_thumb_hd_url %}
                         <img class="product-image" src="{{ product.get_thumb_hd_url }}">
                     {% else %}
                         <img class="product-image" src="{{ product.get_image_url }}">
                     {% endif %}
+                    -->
                     <div class="product-seller">
                         <div class="seller-id">
                             <h2 class="header">{{ product.seller }}</h2>
@@ -136,20 +170,28 @@
                         </div>
                         <div class="product-price">
                             <h2 id="product-price"
-                                data-price="{{ default_price.price }}">
-                                {{ default_price.price }}원
+                                data-price="{{ product.variation_set.first.price }}">
+                                {{ product.variation_set.first.price }}원
                                 {% if variation|length > 1 %}
                                     ~
                                 {% endif %}
                             </h2>
                         </div>
                     </div>
+                    <div class="product-category">
+                        <img class="product-category-image" src="{% static 'img/fasion.png'%}">
+                        <span class="product-category-text">패션/뷰티</span>
+                    </div>
+                    <div class="product-sns">
+                        <img class="product-sns-image" src="{% static 'img/lock.png'%}">
+                        <span class="product-sns-text">SNS 주소구매 후 공개</span>
+                    </div>
                     <div class="product-sub-info">
                         <div class="title">
-                            기본가격
+                            팔로워
                         </div>
                         <div class="sub-content">
-                            <span class="orange price-sub">{{ default_price.price }}원</span>
+                            <span>16,000명</span>
                         </div>
                     </div>
                     <div class="product-sub-info">
@@ -157,8 +199,9 @@
                             작업기간
                         </div>
                         <div class="sub-content">
-                            <span class="orange">{{ default_price.day }}</span>일 (실제평균작업기간 : <span
-                                class="orange">1일</span>)
+                            <span>2</span>일
+                            <!--<span class="orange">{{ default_price.day }}</span>일 (실제평균작업기간 : <span
+                                class="orange">1일</span>)-->
                         </div>
                     </div>
                     <div class="product-sub-info">
@@ -175,6 +218,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div class="product-sub-info">
                         <div class="title">
                             주문성공율
@@ -183,6 +227,16 @@
                             <span class="green">높음</span>
                         </div>
                     </div>
+                    -->
+                    <div class="product-sub-info">
+                        <div class="title">
+                            최근 로그인
+                        </div>
+                        <div class="sub-content">
+                            {{ product.seller.user.last_login|time_since }}
+                        </div>
+                    </div>
+                    <!--
                     <div class="product-sub-info">
                         <div class="title">
                             연락처
@@ -195,16 +249,9 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="product-sub-info">
-                        <div class="title">
-                            최근로그인
-                        </div>
-                        <div class="sub-content">
-                            {{ product.seller.user.last_login|time_since }}
-                        </div>
-                    </div>
-                    {% if product.seller.user.id != user.id %}
-                        <div class="product-sub-info">
+                    -->
+                    {#% if product.seller.user.id != user.id %#}
+                        <div class="product-sub-info ask">
                             <div class="title">
                                 판매자문의
                             </div>
@@ -212,11 +259,12 @@
                                 <div class="ask-seller">
                                     문의하기
                                 </div>
-                                <span>(문의 평균 응답시간)</span>
                             </div>
                         </div>
-                    {% endif %}
+                    {#% endif %#}
+
                     <div class="product-option">
+                        <!--
                         <div class="product-dropdown">
                             {% if variation|length > 1 %}
                                 <input id="product-option" value="옵션" name="product-option" placeholder="" readonly>
@@ -238,13 +286,17 @@
                                 </ul>
                             {% endif %}
                         </div>
+                        -->
                         <div class="product-select-list">
                             <div class="product-select-item">
-                                {{ default_price }} - <span>{{ default_price.price }}</span>원
+                                <!--{{ default_price }} - <span>{{ default_price.price }}</span>원-->
+                                <!--<input type="checkbox" name="test" value="test_val"/>-->
+                                <span>원고가능</span>
+                                <span>+30,000원</span>
                             </div>
                         </div>
                         <div class="product-total">
-                            총 상품금액 : <span id="product-total">{{ default_price.price }}</span><span
+                            총 상품금액 : <span id="product-total">{{ product.variation_set.first.price }}</span><span
                                 id="product-unit">원</span>
                         </div>
                     </div>
