modify home.js for addcomma

--- a/templates/home.html
+++ b/templates/home.html
@@ -224,7 +224,7 @@
                                             </div>
                                         </ul>
                                         <div class="cash">
-                                            <span style="font-size:1.2em; color:grey;">{{ product.variation_set.first.price }}원~</span>
+                                            <span style="font-size:1.2em; color:grey;" data-price="{{ product.variation_set.first.price }}">{{ product.variation_set.first.price }}원~</span>
                                         </div>
                                     </div>
                                     <!--
